[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/money_digital+physicist.png" type="Texture" id=1]
[ext_resource path="res://Script/money_digital+physicist.gd" type="Script" id=2]
[ext_resource path="res://money_invest_our_remove.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Minecraftia-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Script/money_digital.gd" type="Script" id=5]
[ext_resource path="res://Script/money_physicist.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.780392, 0.815686, 0.847059, 1 )
border_color = Color( 0.780392, 0.815686, 0.847059, 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 24
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="MoneyDigital+physicist" type="Sprite" parent="."]
position = Vector2( 641.5, 361.5 )
scale = Vector2( 0.267259, 0.270856 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button_exit" type="Button" parent="."]
show_behind_parent = true
margin_left = 333.0
margin_top = 582.0
margin_right = 485.0
margin_bottom = 645.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_add" type="Button" parent="."]
show_behind_parent = true
margin_left = 598.0
margin_top = 576.0
margin_right = 769.0
margin_bottom = 645.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_remove" type="Button" parent="."]
show_behind_parent = true
margin_left = 848.0
margin_top = 580.0
margin_right = 1001.0
margin_bottom = 646.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="money_invest" type="LineEdit" parent="."]
margin_left = 568.0
margin_top = 463.0
margin_right = 803.0
margin_bottom = 508.0
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0.780392, 0.815686, 0.847059, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="money_digital" type="RichTextLabel" parent="."]
margin_left = 674.0
margin_top = 225.0
margin_right = 874.0
margin_bottom = 265.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="money_physicist" type="RichTextLabel" parent="."]
margin_left = 675.0
margin_top = 314.0
margin_right = 871.0
margin_bottom = 354.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Button_exit" to="." method="_on_Button_exit_pressed"]
[connection signal="pressed" from="Button_add" to="." method="_on_Button_add_pressed"]
[connection signal="pressed" from="Button_remove" to="." method="_on_Button_remove_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
